Add-migration for Init DB

--- a/CMDB-BackEnd/appsettings.json
+++ b/CMDB-BackEnd/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "CMDB": "Server=.;Database=CMDB;Integrated Security=True;Encrypt=false"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
